fix home & sidenav scrollbars

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -24,11 +24,17 @@
     color: #21264D;
 }
 
+#ghost-item{
+    visibility: hidden;
+    cursor: pointer;
+}
+
 #logout {
     background-color: #F77E65;
     position: absolute;
     bottom: 0;
     left: 0;
+    z-index: 2;
 }
 
 mat-drawer-container {
@@ -43,6 +49,17 @@ mat-drawer-container {
     background-size: cover;
     background-image: url("../../../assets/img/login-background.jpg");
     overflow-x: hidden;
+}
+
+.main-content::-webkit-scrollbar {
+    width: 8px;
+    background: grey;
+    box-shadow: inset 0 0 4px #707070;
+}
+
+.main-content::-webkit-scrollbar-thumb {
+    background: #EC5044;
+    border-radius: 10px;
 }
 
 #bg-blur{
@@ -71,6 +88,10 @@ mat-drawer-container {
 
     mat-drawer-container {
         top: 56px;
+    }
+
+    .main-content::-webkit-scrollbar {
+        width: 0;
     }
 
     #bg-blur {
