--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,6 @@
 
 html, body { height: 100%; }
 body { font-family: 'Poppins', sans-serif; }
+
+//Sidenav style
+.mat-drawer-inner-container::-webkit-scrollbar { width: 0; }
